tests/ui/repeated_setters_with_the_same_name_for_optionals.stderr
error[E0308]: mismatched types
 --> tests/ui/repeated_setters_with_the_same_name_for_optionals.rs:8:55
  |
8 |     let my_struct = MyStruct::builder().optional_args(vec![]).build();
  |                                         ------------- ^^^^^^ expected struct `String`, found struct `Vec`
  |                                         |
  |                                         arguments to this function are incorrect
  |
  = note: expected struct `String`
             found struct `Vec<_>`
note: associated function defined here
 --> tests/ui/repeated_setters_with_the_same_name_for_optionals.rs:3:5
  |
1 | #[derive(tidy_builder::Builder)]
  |          ---------------------
2 | pub struct MyStruct {
3 |     #[builder(each = "optional_args")]
  |     ^
  = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)
